--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,20 @@
 # | R                                                |
 # +--------------------------------------------------+
 
+#
+# Note: It is generally recommend including your .Rproj in your Git repo for a
+#       number of reasons. For example, .Rproj settings help enforce some code
+#       style choices with defaults for spacing.
+#
+
 # RStudio Project
 data/
 packrat/lib*/
 .Rproj.user
-rsconnect/
+
+# README
+README.html
+README.nb.html
 
 # History files
 .Rhistory
@@ -27,6 +36,8 @@ rsconnect/
 
 # Session Data files
 .RData
+
+# User-specific files
 .Ruserdata
 
 # TODO file
@@ -41,6 +52,9 @@ TODO.txt
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
 
 # knitr and R markdown default cache directories
 /*_cache/
